adding public files

--- a/public/signup.html
+++ b/public/signup.html
@@ -15,6 +15,7 @@
   <label for="signupPhone">Phone number</label>
   <input type="tel" id="signupPhone" required />
   <button type="submit">Done</button>
+  <p>Already have an account? <a href="login.html">Login here</a></p>
 </form>
   </main>
   <script>
