--- a/public/login.html
+++ b/public/login.html
@@ -14,7 +14,9 @@
       <label for="loginPassword">Password</label>
       <input type="password" id="loginPassword" required />
       <button type="submit">Login</button>
+      <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
     </form>
+    
   </main>
   <script>
     document.getElementById('loginForm').addEventListener('submit', async function(e) {
