--- a/public/verify-otp.html
+++ b/public/verify-otp.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Verify OTP - Yamba</title>
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="/css/style.css" />
+
 </head>
 <body>
   <main>
